<resources>
    <!-- Gallery (google)-->
    <string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete_toast">Caches have been cleared</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="no_network_connection_toast">No network connection found</string>

    <!--Camera Overlay -->
    <string name="latitudeLongitude">14*32\'6\"N, 121*2\'25\"E </string>
    <string name="altitude">Altitude: 262ft</string>
    <string name="timeOverlay">3:56pm</string>
    <string name="dateOverlay">11/29/2015</string>

    <!-- camera -->
    <string name="camera_error">This device doesn\'t support Camera2 API</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <!--gallery fragment xml -->
    <!-- gayahin yung pag fetch ng info sa sunshine exif? -->

    <string name="buttonEditProfile">Edit Profile</string>

    <string name="app_name">Maicam</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="hello_world">Hello world!</string>

    <!--Menu Items-->
    <string name="action_settings">About</string>
    <string name="action_map">Map Location</string>


    <string name="title_activity_camera_page">CameraPage</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gallery_detail">GalleryDetail</string>
    <string name="title_activity_camera">CameraActivity</string>

    <!--Location xml -->
    <string name="latitudeLabel">Latitude</string>
    <string name="longitudeLabel">Longitude</string>
    <string name="latitudeValue">Looking for GPS signal</string>
    <string name="longitudeValue">Looking for GPS signal</string>
    <string name="locationLabel">Location:</string>
    <string name="locationValue">No location found.</string>

    <!--in getting location name-->
    <string name="service_not_available">Service not available.</string>
    <string name="invalid_lat_long_used">Invalid latitude and longitude values.</string>
    <string name="no_address_found">No address found.</string>
    <string name="address_found">Address found.</string>
    <string name="no_geocoder_available">No geocoder available.</string>
</resources>
