<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.project.maico.maicam.LocationFragment"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingTop="30dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitudeLabel"
        android:textAllCaps="true"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/latitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/latitudeValue"
        android:textSize="40dp"
        android:textColor="@color/maicam_dark_blue"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/longitudeLabel"
        android:textAllCaps="true"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/longitudeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/longitudeValue"
        android:textSize="40dp"
        android:textColor="@color/maicam_dark_blue"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:text="@string/locationLabel"
        android:textSize="40dp"
        />

    <TextView
        android:id="@+id/locationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/locationValue"
        android:textSize="40dp"
        android:textColor="@color/maicam_dark_blue"/>


</LinearLayout>
</ScrollView>
