<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="12dp"
    android:paddingBottom="8dp"
    android:paddingRight="10dp"
    android:paddingLeft="8dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/latitudeLongitude"
        android:id="@+id/altitude"
        android:paddingBottom="8dp"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/altitude"
        android:layout_centerHorizontal="true"
        android:text="@string/altitude"
        android:textColor="@color/white"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/image_placeholder"
        android:layout_alignParentBottom="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dateOverlay"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:id="@+id/dateOverlay"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/dateOverlay"
        android:layout_alignParentRight="true"
        android:text="@string/timeOverlay"
        android:textColor="@color/white"/>

</RelativeLayout>